--- a/Lab1/run_test.ipynb
+++ b/Lab1/run_test.ipynb
@@ -1,6 +1,63 @@
-
-# Biên dịch code C++ thành chương trình thực thi
-!g++ test_solver.cpp -o solver
-
-# Chạy chương trình kiểm thử
-!./solver
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "48d1273b",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bca4d9eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ All test cases passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "!g++ test_solver.cpp -o solver\n",
+    "!./solver\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c536ef13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
